--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ You can find the code of your language here - https://www.w3schools.com/tags/ref
                                 <div class="row mt-60 mt-xs-20">
                                     
                                     <div class="col-sm-6 col-lg-5 align-center pt-20 pt-lg-0 mb-xs-30">
-                                        <div class="hs-line-4 font-alt mb-20">Tom van der laken</div>
+                                        <div class="hs-line-4 font-alt mb-20">Tom Vanderlaken</div>
                                         <h1 class="hs-line-15 font-alt mb-40 mb-xs-20">De geheime oorsprong</h1>
                                         <div class="section-text white mb-70 mb-xs-40 text-justify">
                                             <p>
