--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/styleboek.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/style-responsive.css">
         <link rel="stylesheet" href="css/animate.min.css">
         <link rel="stylesheet" href="css/vertical-rhythm.min.css">
@@ -139,7 +139,7 @@
                                     </div>
                                     
                                     <div class="col-sm-6 offset-lg-1">
-                                     <a target="_blank" href="https://issuu.com/vbku/docs/xl_leesfragment_de_geheime_oorsprong"> <img src="images/cv-resume/3d.png" alt="Afbeelding van voorkant Het boek"De geheime oorsprong""/> </a>   
+                                     <a target="_blank" href="https://issuu.com/vbku/docs/xl_leesfragment_de_geheime_oorsprong"> <img src="images/3d.png" alt="Afbeelding van voorkant Het boek"De geheime oorsprong""/> </a>   
                                     </div>
                                     <a href="#over"
                                     <div class="mouse_scroll">
