--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     </div>
                 </section>
                <div id="test" class="row">
+                <hr class="mt-0 mb-0 ">
                 <a id="literatuurprijs" class="anchorliteratuurprijs">  </a>
                     <h2  class="section-title font-alt mb-70 mb-sm-40"> Aanbeveling voor literatuurprijs
 
@@ -223,6 +224,7 @@
                     </div>
                     <div class="team-item-role">
                         Mei 2021
+                        <hr class="mt-0 mb-0 ">
                     </div>
                 
                 </div>  
