hr(2x) onder laatste video geplaats voor ruimte

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
             </div>
           </div>
-          <div id="footer"> test </div>
+          <div id="footer"> <hr><hr> </div>
 
         </section>
 
