--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <head>
         <title>De geheime oorsprong &mdash; Tom Vanderlaken </title>
-        <meta name="description" content="Rhythm &mdash; de_geheime_oorsprong">    
+        <meta name="description" content="De geheime oorsprong">    
         <meta charset="utf-8">
         <meta name="author" content="Tom Vanderlaken">
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
