--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                                    <div class="footer-social-links mb-110 mb-xs-60">
                                                     <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> <span class="sr-only">Facebook profile</span></a>
                                                     <a href="#" title="Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <span class="sr-only">Instagram profile</span></a>
-                                                    <a href="hebban.nl" title="Hebban.nl" target="_blank"><p>Hebban</p> <span class="sr-only">Hebban.nl [Boek club]</span></a>
+                                                    <a href="hebban.nl" title="https://www.hebban.nl/spot/leesclub-de-geheime-oorsprong" target="_blank"><i>Hebban</i> <span class="sr-only">Hebban.nl [Boek club]</span></a>
 
                                                     </div>
 
