instagram link geupdate

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                                                    <div class="footer-social-links mb-110 mb-xs-60">
                                                     <a href="https://web.facebook.com/Tom-Vanderlaken-111796817809009" title="Facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> <span class="sr-only">Facebook profile</span></a>
-                                                    <a href="https://web.facebook.com/Tom-Vanderlaken-111796817809009" title="Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <span class="sr-only">Instagram profile</span></a>
+                                                    <a href="https://www.instagram.com/tomvanderlaken/" title="Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <span class="sr-only">Instagram profile</span></a>
                                                     <a href="https://www.hebban.nl/spot/leesclub-de-geheime-oorsprong" title="Hebban.nl" target="_blank"><i>Hebban</i> <span class="sr-only">Hebban.nl [Boek club]</span></a>
 
                                                     </div>
